# simple-np

./: .gitignore  README.md
app_pc/: SimpleNP.sln
app_pc/SimpleNP.Acm/: AcmDeviceInfo.cs  AcmDeviceScanner.cs  AcmRecognitionInfo.cs  AcmSettings.cs  InvokeOnDispose.cs  SimpleNP.Acm.csproj
app_pc/SimpleNP.Acm.TestApp/: Program.cs  SimpleNP.Acm.TestApp.csproj
app_pc/SimpleNP.Acm/Drivers/: AcmConstants.cs  AcmDriver.cs  AcmKeyState.cs  AcmKeys.cs
fw/: CMakeLists.txt  ledctl.cpp  ledctl.h  main.cpp  tusb_config.h
fw/board/: config.h  ledctl.cpp  ledctl.h  usbd.cpp  usbd.h
fw/board/usbd/: cdc_message.cpp  cdc_message.h  descriptors.cpp  hid_notifier.cpp  hid_notifier.h
fw/kbd/: kbd.cpp  kbd.h  keymap.cpp  keymap.h  keys.h  macro.cpp  scancode.cpp  scancode.h  toggle.cpp  toggle.h
fw/kbd/handlers/: numlock.cpp  userfn.cpp  userfn.h
fw/kbd/scanners/: basic.cpp  basic.h
fw/lib/st7735/: ST7735_TFT_Font.cpp  ST7735_TFT_graphics.cpp
fw/mode/: mode.cpp  mode.h  numpad.cpp  numpad.h  welcome.cpp  welcome.h
fw/msg/: command.cpp  command.h  receiver.cpp  receiver.h
fw/task/: task.cpp  task.h  taskqueue.cpp
fw/tft/: tft.cpp  tft.h
fw/usb/: usbd.cpp  usbd.h  usbd_event.cpp  usbd_hid.cpp
fw_old/: ledctl.h  main.cpp
fw_old/kbd/: keymap.h  macro.h  toggle.cpp
fw_old/lib/st7735/: ReadMe.md  ST7735_TFT.cpp  ST7735_TFT_Bitmap_Data.cpp  ST7735_TFT_Bitmap_Data.hpp  ST7735_TFT_Font.hpp  ST7735_TFT_Print.cpp  ST7735_TFT_graphics.hpp
fw_old/msg/: command.cpp  frame.cpp  frame.h
fw_old/tft/: tft.cpp  tft.h
fw_old/usb/: usbd.cpp  usbd_event.cpp  usbd_uid.cpp
fw_refactor/: CMakeLists.txt  main.cpp  tusb_config.h
fw_refactor/board/: ledctl.cpp
fw_refactor/kbd/: kbd.cpp  kbd.h  keys.h
fw_refactor/kbd/handlers/: numlock.h  userfn.cpp
fw_refactor/kbd/scanners/: basic.cpp  basic.h
fw_refactor/lib/st7735/: ST7735_TFT.hpp
fw_refactor/task/: taskqueue.cpp  taskqueue.h
fw_refactor/tft/: tft.cpp  tft.h
hw/: KEY_ARRAY.kicad_sch  MACRO_FN.kicad_sch  MCU.kicad_sch  POWER_CAP.kicad_sch  RP2040_KBD.kicad_pcb  RP2040_KBD.kicad_prl  RP2040_KBD.kicad_pro  RP2040_KBD.kicad_sch  TFT_ST7735.kicad_sch
hw/gerber/: RP2040_KBD-B_Cu.gbr  RP2040_KBD-B_Mask.gbr  RP2040_KBD-B_Paste.gbr  RP2040_KBD-B_Silkscreen.gbr  RP2040_KBD-Edge_Cuts.gbr  RP2040_KBD-F_Cu.gbr  RP2040_KBD-F_Mask.gbr  RP2040_KBD-F_Paste.gbr  RP2040_KBD-F_Silkscreen.gbr  RP2040_KBD-NPTH-drl_map.gbr  RP2040_KBD-NPTH.drl  RP2040_KBD-PTH-drl_map.gbr  RP2040_KBD-PTH.drl  RP2040_KBD-job.gbrjob
